changes before the new Windows

--- a/SeleniumFirst/ElquireWithSelenium.csproj
+++ b/SeleniumFirst/ElquireWithSelenium.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Selectors\Front\Popaps\SignIn.cs" />
     <Compile Include="Selectors\Front\Popaps\SignUp.cs" />
     <Compile Include="Selectors\Front\TermPage.cs" />
+    <Compile Include="Selectors\Other\OtherPages.cs" />
+    <Compile Include="Tests\RestorePaswordPopapTests.cs" />
     <Compile Include="Tests\SignInPopapTests.cs" />
     <Compile Include="Tests\SignUpPopapTests.cs" />
   </ItemGroup>
