--- a/SeleniumFirst/ElquireWithSelenium.csproj
+++ b/SeleniumFirst/ElquireWithSelenium.csproj
@@ -59,13 +59,16 @@
     <Compile Include="ElquireSetMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Selectors\Front\CreateDepositPage.cs" />
     <Compile Include="Selectors\Front\MainPage.cs" />
-    <Compile Include="Selectors\Front\Popaps\CabinetMainPage.cs" />
+    <Compile Include="Selectors\Front\CabinetMainPage.cs" />
     <Compile Include="Selectors\Front\Popaps\RestorePassword.cs" />
     <Compile Include="Selectors\Front\Popaps\SignIn.cs" />
     <Compile Include="Selectors\Front\Popaps\SignUp.cs" />
+    <Compile Include="Selectors\Front\QRCodePage.cs" />
     <Compile Include="Selectors\Front\TermPage.cs" />
     <Compile Include="Selectors\Other\OtherPages.cs" />
+    <Compile Include="Tests\CreateDepositTests.cs" />
     <Compile Include="Tests\RestorePaswordPopapTests.cs" />
     <Compile Include="Tests\SignInPopapTests.cs" />
     <Compile Include="Tests\SignUpPopapTests.cs" />
